<resources>
    <string name="app_name">Witcom</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_feeds">Feeds</string>
    <string name="logo">WITCOM</string>
    <string name="title_place_list"></string>
    <string name="title_place_detail">Place detail</string>
    <string name="title_conference_list">Schedule</string>
    <string name="title_conference_detail">Event Detail</string>
    <string name="title_workshop_list">Workshops</string>
    <string name="title_workshop_detail">Workshop Detail</string>

    <string name="tourism">Tourism</string>
    <string name="speakers">Speakers</string>
    <string name="conferences">Schedule</string>
    <string name="workshops">Workshops</string>
    <string name="how_to_arrive">How to arrive</string>
    <string name="sketch">Sketch</string>

    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="schedule">Schedule</string>
    <string name="navigate">Navigate</string>
    <string name="title_activity_witcom_program">Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_witcom_workshop">Workshop</string>

    <string name="about">: ABOUT</string>
    <string name="collaborators">{ COLLABORATORS }</string>

    <string name="organizers">{ ORGANIZERS }</string>
    <string name="miguel_felix">>_ Dr. Miguel Félix Mata Rivera</string>
    <string name="carlos_nava">>_ M. en C. Carlos Hernández Nava</string>
    <string name="miguel_alejandro">>_ M. en C. Miguel Alejandro Martínez Rosales</string>

    <string name="developers">{ Developers }</string>
    <string name="edgar_hernandez">>_ Edgar Hernández Solís</string>
    <string name="oscar_lemus">>_ Oscar Alejandro Lemus Pichardo</string>
    <string name="miguel_maldonado">>_ Miguel Armando Maldonado Vázquez</string>

    <string name="navigation">Navigation</string>
    <string name="how_get">How would you get there?</string>
    <string name="data_usage">This option can consume data</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="car">Car</string>
    <string name="bicycle">Bicycle</string>
    <string name="walking">Walking</string>

    <string name="silao_address">UPIIG.-Av. Mineral de Valenciana No. 200 Col. Fracc. Industrial Puerto Interior, C.P. 36275 Silao de la Victoria, Guanajuato México \nTel. (472) 74 84638 Conmutador: (55) 57 29 6000 Ext. 81301 \nFax: 81450, \nCorreo Electrónico: upiig@ipn.mx </string>

    <string name="transition_pager">transition_pager</string>
    <string name="transition_city">transition_city</string>
    <string name="transition_place">transition_place</string>
    <string name="transition_workshop">transition_workshop</string>
    <string name="transition_conference">transition_conference</string>

    <string name="updating">Updating</string>
    <string name="wait">Please wait a moment</string>
    <string name="update">Update</string>

    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="about_details">About</string>
    <string name="place">Place</string>
    <string name="monitor">Monitor</string>
    <string name="notes">Notes</string>
    <string name="author">Speaker</string>
    <string name="from">From</string>

    <string name="no_connection">You have not Internet access</string>

    <string name="update_content">Please update the content\n(menu)</string>
</resources>
