<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimaryDark"
                android:textSize="40sp"
                android:layout_gravity="left|center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/custWhite"
                    android:gravity="center"
                    android:text="This is WITCOM 2016
International Congress on Telematics, Computing and Communications"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:src="@drawable/witcomlogo"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/custWhite"
                android:gravity="center"
                android:text="This edition WITCOM 2016 will be celebrated in Silao, Guanajuato, with the support of UPIIG-IPN. WITCOM aims bringing together researchers, developers, users, entrepreneurs and practitioners to discuss and present trend topics and novelty systems based on {telematics}, {computing} and {communications}, fostering interdisciplinary discussions and research in all aspects of Telematics."/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorAccent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/custWhite"
                    android:text="@string/collaborators"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/custWhite"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1,2">

                    <TableRow>

                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/upiigtrans_opt"
                            android:layout_gravity="center"/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/oracle"
                            android:layout_gravity="center"
                            android:layout_column="1"/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/cisco"
                            android:layout_gravity="center"
                            android:layout_column="2"/>

                    </TableRow>

                    <TableRow>

                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/umayor_pie"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/cinvestav"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"/>
                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/upiita"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"/>

                    </TableRow>

                    <TableRow>

                        <View />

                        <ImageView
                            android:layout_width="@dimen/colabsAbout"
                            android:layout_height="@dimen/colabsAbout"
                            android:src="@drawable/ipn"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"/>

                        <View />

                    </TableRow>
                </TableLayout>

                <!--<LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c4"/>
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c5"/>
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c6"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c7"/>
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c8"/>
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c9"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c10"/>
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c11"/>
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c12"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c13"/>
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c14"/>
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c15"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c16"/>
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c17"/>
                    <ImageView
                        android:layout_width="@dimen/colabsAbout"
                        android:layout_height="@dimen/colabsAbout"
                        android:src="@drawable/c18"/>
                </LinearLayout>-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/textAccent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/organizers"
                    android:textColor="@color/custWhite"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/custWhite"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/migfel"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/miguel_felix"
                        android:textColor="@color/custWhite"
                        android:textSize="25sp"
                        android:layout_gravity="start"
                        android:id="@+id/felix"
                        android:layout_marginStart="10dp"
                        android:onClick="sendMail"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/nava"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/carlos_nava"
                        android:textColor="@color/custWhite"
                        android:textSize="25sp"
                        android:layout_gravity="start"
                        android:id="@+id/nava"
                        android:layout_marginStart="10dp"
                        android:onClick="sendMail"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/miguel_alejandro"
                        android:textColor="@color/custWhite"
                        android:textSize="25sp"
                        android:layout_gravity="start"
                        android:id="@+id/rosales"
                        android:layout_marginStart="10dp"
                        android:onClick="sendMail"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/developers"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edgar_hernandez"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_gravity="left"
                    android:id="@+id/edgar"
                    android:onClick="sendMail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oscar_lemus"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_gravity="left"
                    android:id="@+id/lemus"
                    android:onClick="sendMail"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miguel_maldonado"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_gravity="left"
                    android:id="@+id/mike"
                    android:onClick="sendMail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/silao_address"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"
                    android:textIsSelectable="true"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>